@@ -9,6 +9,8 @@ CHANGELOG
 utils:
 rules-edit : new filters 'target is.any' 'target has xxxxx/vsysX'
 rules-edit : new actions 'name-Append' and 'name-Prepend'
+rules-edit : new filters 'snathost has xxxx'
+rules-edit : new filters 'dnathost has xxxx'
 
 bugfixes:
 - fixed an issue where security profile filter 'is.set' and 'not.set' could return wrong value
